syntax = "proto3";

package proto;

option go_package = "./";

message RegisterReq {
  string Mobile = 1;
  string Name = 2;
  string NickName = 3;
  string UserCode = 10;
  int64  AcatorFileId = 4;
  string Sex = 5;
  int64  Age = 6;
  string IpAddress = 7;
  string Constellation = 8;
  string Signature = 9;
  string Status = 11;
  string AuthriryInfo = 12;
  string RealNameAuth = 13;
  string OnlineStatus = 14;
  string AuthrityType = 15;
}

message RegisterResp {
  string Message = 1;
  int64  Code = 2;
  int64 UserId = 3;
  string UserCode = 4;
}

service User {
  rpc Register(RegisterReq) returns (RegisterResp);
}